# telegram-message-engine

./: .clangd  CMakeLists.txt  readme.md
src/: main.cpp
src/core/database/: database.h  dbelement.h  dbquery.h
src/core/multithreading/: concurrent_queue.h  pipeline.h  task.h
src/core/parsenode/: node.cpp  node.h
src/messages/: message.h  messagedb.cpp  messagedb.h  messagequery.cpp  messagequery.h
src/parsing/: message_extractor.cpp  message_extractor.h
src/utils/: string_helper.h
